# LLMPricingRegistry

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  pyrightconfig.json  specs.md
.github/: labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: add-provider-or-model.yml  config.yml  estimation-bug.yml  pricing-correction.yml
.github/workflows/: ci.yml  publish.yml  release-please.yml  release.yml  tests.yml
app/: constants.py  logging.py  main.py
app/api/: errors.py  middleware.py  routes.py  schemas.py
app/engine/: __init__.py  calculator.py  exceptions.py
app/pricing/: __init__.py  models.py  repository.py
pricing/: registry_meta.json
pricing/aliases/: openai_aliases.json  openrouter_mappings.json  provider_aliases.json
pricing/providers/: anthropic.json  aws_bedrock.json  deepseek.json  google.json  groq.json  kimi.json  mistral.json  openai.json  openrouter.json  together.json  vertex_ai.json  xai.json
schema/: pricing_provider.schema.json  pricing_registry_meta.schema.json
tests/: test_api.py  test_engine.py
